Removed view reference from Undo.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.shape.app.ui.shape.MainActivity">
+        <activity android:name="com.shape.app.shape.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.shape.app.ui.stats.StatsActivity"
+            android:name=".stats.view.StatsActivity"
             android:label="@string/stats_label" />
     </application>
 
